samples/_failures_safe/1761473694_6ed3bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ae4d24.c: In function ‘main’:
./samples/SAFE/__tmp_d5ae4d24.c:123:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  123 |     size_t decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_d5ae4d24.c:123:5: error: expected declaration or statement at end of input
